2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add "<Asx" as a possible
	magic for ASX files (Closes: GNOME #505398)

2008-02-05  Alexander Larsson  <alexl@redhat.com>

	* freedesktop.org.xml.in:
	Lower xml magic priority so that its lower than
	e.g. text/html.
	Patch from David Faure

2008-01-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.ttx: Patch from Christian Persch
	<chpe@gnome.org> to add the TTX font mime-type (Closes: #14318)

2008-01-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Paolo Borelli
	<pborelli@katamail.com> to add the Eiffel code mime-type
	(Closes: #14288)

2008-01-07  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Frederic Crozat
	<fcrozat@mandriva.com> to add LZMA archives (Closes: #13256)

=== shared-mime-info 0.23 ===

2007-12-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.23
	* Makefile.am: add HACKING file to the dist
	* HACKING: add location for the CVS server and release method

2007-12-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix capitalisation for
	a number of mime-types, don't use "QT", "WMV/WMA" and "NSV"
	in comments

	Remove the useless gtar, make application/x-gtar an
	alias for tar

	Add translator comment for SNES/NES/Genesis, as those
	were known under different names depending on the location/region

	Mention the acronyms in the raw digital image types

	Add an acronym for RPM

2007-12-12  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: add the pot file to the dist,
	should fix problems with the translation project

2007-12-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/office.doc: 
	Remove the magic from the Powerpoint files,
	it's actually magic for "Microsoft Office document"
	and add it to x-ole-storage, add a test file to the
	testsuite