@@ -3,6 +3,7 @@ test.bmp image/bmp
 test.cel image/x-cel xxx 
 test.dcm application/dicom
 test.eps image/x-eps
+GammaChart.exr image/x-exr
 test.fit image/x-fits x
 test.fli video/x-flic ox
 test.gif image/gif
